# python-project-52

./: .env  .gitignore  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  ruff.toml  sonar-project.properties
.github/workflows/: build.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: models.py  settings.py  urls.py  views.py
task_manager/labels/: urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_task.py  0003_delete_task.py  0004_add_labels_m2m.py
task_manager/statuses/: urls.py  views.py
task_manager/templates/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/statuses/: delete.html  list.html
task_manager/templates/users/: create.html  list.html  update.html
task_manager/users/: forms.py  urls.py  views.py
tasks/: admin.py  forms.py  models.py  urls.py  views.py
tasks/templates/tasks/: create.html  list.html  show.html  update.html
tasks/tests/: test_filters.py  test_filterset.py  test_labels.py  test_models.py  test_urls.py  test_views.py
templates/: base.html  login.html
tests/: test_labels.py  test_statuses.py  test_urls.py  test_users.py
