[project]
name = "python-project-52"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-bootstrap5>=26.2",
    "gunicorn>=25.3.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]
